Bug 45090 - PostgreSQL-SDBC fails to load on Unix / official binaries: missing libldap50.so
Summary: PostgreSQL-SDBC fails to load on Unix / official binaries: missing libldap50.so
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
3.5.0 RC1
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-22 08:26 UTC by Lionel Elie Mamane
Modified: 2012-01-23 09:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lionel Elie Mamane 2012-01-22 08:26:36 UTC
In our official DEB binaries for RC1, PostgreSQL-SDBC fails to load because libldap50.so is not found when trying to load  postgresql-sdbc-impl.uno.so.

Workarounds:

 - cp/ln cp /opt/libreoffice3.5/program/libldap50.so /opt/libreoffice3.5/share/extensions/postgresql-sdbc/

 - sudo chrpath -r '$ORIGIN/../../../program' /opt/libreoffice3.5/share/extensions/postgresql-sdbc/postgresql-sdbc-impl.uno.so

 - export LD_LIBRARY_PATH=/opt/libreoffice3.5/program/

Note the state in the binaries we distribute

(RPATH)              Library rpath: [$ORIGIN:$ORIGIN/../ure-link/lib]
(RUNPATH)            Library runpath: [$ORIGIN:$ORIGIN/../ure-link/lib]
Comment 1 Stephan Bergmann 2012-01-23 09:07:20 UTC
For a description how to test postgresql-sdbc, see <http://lists.freedesktop.org/archives/libreoffice/2012-January/024333.html> "rpath / ... for extensions (and the case of PostgreSQL-SDBC)."
Comment 2 Stephan Bergmann 2012-01-23 09:13:48 UTC
<http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=3a7ae48b6f610899200ae2800706533f7c4c9f80> "fdo#45090: Changed postgresql-sdbc from bundled oxt to proper optional part" should fix that, as discussed in the mail thread starting at <http://lists.freedesktop.org/archives/libreoffice/2012-January/024255.html> "rpath / ... for extensions (and the case of PostgreSQL-SDBC)."