fdo#45090: Changed postgresql-sdbc from bundled oxt to proper optional part.

Replaced --enable-ext-postgresql-sdbc with --disable-postgresql-sdbc.
Renamed postgresql-sdbc.uno{.ini,rc} to consistent postgresql-sdbc.ini
(which made the code a little easier).

Signed-off-by: Fridrich Štrba <fridrich.strba@bluewin.ch>

(cherry picked from commit 3a7ae48b6f610899200ae2800706533f7c4c9f80)
Conflicts:
	configure.in
	connectivity/source/drivers/postgresql/makefile.mk