connectivity/source/drivers/postgresql/makefile.mk
@@ -63,7 +63,7 @@ NO_DEFAULT_STL=TRUE
 
 # --- Settings -----------------------------------------------------
 
-.INCLUDE :  settings.mk
+.INCLUDE: $(PRJ)/makefile.pmk
 
 .IF "$(BUILD_POSTGRESQL_SDBC)" == "YES"
 
@@ -75,7 +75,6 @@ DLLPRE=
 PQ_SDBC_MAJOR=0
 PQ_SDBC_MINOR=8
 PQ_SDBC_MICRO=2
-PQ_SDBC_VERSION=$(PQ_SDBC_MAJOR).$(PQ_SDBC_MINOR).$(PQ_SDBC_MICRO)
 
 LIBPQ_DEP_LIBS=
 .IF "$(SYSTEM_POSTGRESQL)"=="YES"
@@ -117,7 +116,7 @@ SHL1STDLIBS= \
 SHL1LIBS=	$(LIB1TARGET)
 SHL1DEF=	$(MISC)/$(SHL1TARGET).def
 DEF1NAME=	$(SHL1TARGET)
-SHL1VERSIONMAP=$(SOLARENV)/src/reg-component.map
+SHL1VERSIONMAP=$(SOLARENV)/src/component.map
 
 SHL2TARGET=postgresql-sdbc-impl.uno
 LIB2TARGET=$(SLB)/$(SHL2TARGET).lib
@@ -168,63 +167,39 @@ SHL2STDLIBS= \
 SHL2LIBS=	$(LIB2TARGET)
 SHL2DEF=	$(MISC)/$(SHL2TARGET).def
 DEF2NAME=	$(SHL2TARGET)
-SHL2VERSIONMAP=$(SOLARENV)/src/reg-component.map
+SHL2VERSIONMAP=$(SOLARENV)/src/component.map
 
 
 SLOFILES=       $(LIB1OBJFILES) $(LIB2OBJFILES)
 
+.INCLUDE: $(PRJ)/target.pmk
 
-DRIVERNAME=postgresql-sdbc.oxt
-ALLTAR : $(DLLDEST)/$(DRIVERNAME)
+ALLTAR : $(MISC)/postgresql-sdbc.rdb
+
+$(MISC)/postgresql-sdbc.rdb .ERRREMOVE : \
+        $(SOLARENV)/bin/packcomponents.xslt $(MISC)/postgresql-sdbc.input \
+        $(MISC)/postgresql-sdbc.component $(MISC)/postgresql-sdbc-impl.component
+    $(XSLTPROC) --nonet --stringparam prefix $(PWD)/$(MISC)/ -o $@ \
+        $(SOLARENV)/bin/packcomponents.xslt $(MISC)/postgresql-sdbc.input
+
+$(MISC)/postgresql-sdbc.input : makefile.mk
+    echo '<list><filename>postgresql-sdbc.component</filename>' \
+        '<filename>postgresql-sdbc-impl.component</filename></list>' > $@
+
+$(MISC)/postgresql-sdbc.component .ERRREMOVE : \
+        $(SOLARENV)/bin/createcomponent.xslt postgresql-sdbc.component
+    $(XSLTPROC) --nonet --stringparam uri \
+        '$(COMPONENTPREFIX_BASIS_NATIVE)$(SHL1TARGETN:f)' -o $@ \
+        $(SOLARENV)/bin/createcomponent.xslt postgresql-sdbc.component
+
+$(MISC)/postgresql-sdbc-impl.component .ERRREMOVE : \
+        $(SOLARENV)/bin/createcomponent.xslt postgresql-sdbc-impl.component
+    $(XSLTPROC) --nonet --stringparam uri \
+        '$(COMPONENTPREFIX_BASIS_NATIVE)$(SHL2TARGETN:f)' -o $@ \
+        $(SOLARENV)/bin/createcomponent.xslt postgresql-sdbc-impl.component
+
+.ELSE
+
+ALLTAR:
 
 .ENDIF # BUILD_POSTGRESQL_SDBC
-
-# --- Targets ------------------------------------------------------
-.INCLUDE :  target.mk
-
-.IF "$(GUI)" == "UNX"
-INI_EXT=rc
-.ELSE
-INI_EXT=.ini
-.ENDIF
-
-$(DLLDEST)/$(SHL1TARGET)$(INI_EXT): $(SHL1TARGET)
-    +cp $? $@
-
-$(DLLDEST)/$(DRIVERNAME): \
-        $(DLLDEST)/META-INF/manifest.xml \
-        $(DLLDEST)/description.xml \
-        $(DLLDEST)/description/description_en-US.txt \
-        $(DLLDEST)/postgresql.xcu \
-        $(DLLDEST)/$(SHL1TARGET)$(DLLPOST) \
-        $(DLLDEST)/$(SHL2TARGET)$(DLLPOST) \
-        $(DLLDEST)/$(SHL1TARGET)$(INI_EXT)
-    +cd $(DLLDEST) && \
-        zip -r  $(DRIVERNAME) \
-            META-INF/manifest.xml \
-            $(SHL1TARGET)$(DLLPOST) \
-            $(SHL2TARGET)$(DLLPOST) \
-            $(SHL1TARGET)$(INI_EXT) \
-            description.xml \
-            description/description_en-US.txt \
-            postgresql.xcu
-
-$(DLLDEST)/description/% : description/%
-    mkdir -p $(DLLDEST)/description
-    +cp $? $@
-
-$(DLLDEST)/META-INF/manifest.xml : manifest.xml
-    mkdir -p $(DLLDEST)/META-INF
-    +cp $? $@
-
-$(DLLDEST)/description.xml : description.xml
-    +sed -e 's/@EXTENSION_VERSION@/$(PQ_SDBC_VERSION)/' < $? > $@
-
-$(DLLDEST)/postgresql.xcu : postgresql.xcu
-    rm -f $@
-    cat postgresql.xcu > $@
-
-strip :
-.IF "$(GUI)"!="WNT"
-    strip $(DLLDEST)/$(SHL1TARGET)$(DLLPOST) $(DLLDEST)/$(SHL2TARGET)$(DLLPOST)
-.ENDIF
